--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "parcel": "^2.0.0-rc.0",
     "parcel-reporter-static-files-copy": "^1.3.0",
     "postcss": "^8.3.6",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "sharp": "^0.31.3"
   }
 }
